Change fleet, econs & PNL calcs to hide negative sign on delta cols.
Refactor row factory to remove massive code duplication